# Pacman

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Bonuses/: BigGums.cpp  BigGums.h  Bonuses.cpp  Bonuses.h  Fruits.cpp  Fruits.h  Gums.cpp  Gums.h
src/Button/: Button.cpp  Button.h  PillButton.cpp  PillButton.h  SettingHeaderButton.cpp  SettingHeaderButton.h
src/Entity/: Entity.cpp  Entity.h  Pacman.cpp  Pacman.h
src/Entity/Ghosts/: Blinky.cpp  Blinky.h  Clyde.cpp  Clyde.h  Ghost.cpp  Ghost.h  Ghosts.cpp  Ghosts.h  Inky.cpp  Inky.h  Pinky.cpp  Pinky.h
src/Map/: Map.cpp  Map.h  Portals.cpp  Portals.h  Walls.cpp  Walls.h
src/MyObjects/MyConvexShape/: MyConvexShape.cpp  MyConvexShape.h  MyConvexShapeHelper.cpp  MyConvexShapeHelper.h
src/MyObjects/MySprite/: Sprite1H.cpp  Sprite1H.h  Sprite2H.cpp  Sprite2H.h
src/MyObjects/MyText/: MyText.cpp  MyText.h
src/MyObjects/MyWindow/: MyWindow.cpp  MyWindow.h
src/Observer/: Observer.cpp  Observer.h
src/Scenes/: Scenes.h
src/Scenes/PopUpWindows/: BackMainMenu.cpp  BackMainMenu.h  Close.cpp  Close.h  GameOver.cpp  GameOver.h  Pause.cpp  Pause.h
src/Scenes/Settings/: DevOptions.cpp  DevOptions.h  GameOptions.cpp  GameOptions.h  GraphicsOptions.cpp  GraphicsOptions.h  MainMenuSettings.cpp  MainMenuSettings.h  MusicOptions.cpp  MusicOptions.h  MusicOptionsHelper.cpp  MusicOptionsHelper.h  SettingsHelper.cpp  SettingsHelper.h
src/Scenes/StaticScenes/: ChooseMode.cpp  ChooseMode.h  MainMenu.cpp  MainMenu.h
src/Scenes/StaticScenes/ClassicGame/: ClassicGame.cpp  ClassicGame.h  ClassicGameLabels.cpp  ClassicGameLabels.h  ClassicGameMusic.cpp  ClassicGameMusic.h  Preview.cpp  Preview.h
src/Scenes/StaticScenes/ClassicGame/Intermissions/: Intermission1.cpp  Intermission1.h  Intermission2.cpp  Intermission2.h  Intermission3.cpp  Intermission3.h  Intermissions.h
src/Score/: Score.cpp  Score.h
src/TechInfo/: Cycles.cpp  Cycles.h  FPS.cpp  FPS.h  TechInfo.cpp  TechInfo.h
src/additional/: ComingSoon.h  FileInfo.h  FirstOpen.h  Globals.cpp  Globals.h  Music.cpp  Music.h  PacmanTitle.h  PathFinder.cpp  PathFinder.h  PathStrings.cpp  Profiler.cpp  Profiler.h
